programming-language/workspace/compiler/tests/fixtures/valid/hello.cb64
# Hello World program
def main():
    println("HELLO, WORLD!")
