programming-language/workspace/compiler/tests/fixtures/invalid/invalid_escape.cb64
# Invalid escape sequence
def main():
    println("hello\x")
